# R-Type

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  RFC - Client Server.md  install.bat  install.sh  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_template.yaml
.github/workflows/: deployement.yml
__cmrc_assets/: lib_.cpp
assets/: Level1.yaml
assets/levels/: Level1.yaml  Level2.yaml  Level3.yaml
docs/: GUIDE - Gameplay config file.md  GUIDE_Adding-assets.md  GUIDE_Adding-classes.md  GUIDE_Adding-levels(default-mode).md  GUIDE_Adding-mobs.md  RFC - Client Server.md
sources/: debugColors.cpp  debugColors.hpp  main.cpp
sources/ECS/: Assets.hpp
sources/ECS/Assets/: Assets.cpp  Assets.hpp
sources/ECS/Components/: Animation.hpp  AutoMove.hpp  Collision.hpp  Controllable.hpp  Drawable.cpp  Drawable.hpp  EntityClass.cpp  EntityClass.hpp  Group.hpp  Health.hpp  MonsterShoot.hpp  Position.hpp  PowerUp.hpp  Projectile.hpp  Score.hpp  Scroll.hpp  ScrollingBackground.hpp  Shoot.hpp  Velocity.hpp
sources/ECS/EntityClass/: Entity.cpp  Entity.hpp
sources/ECS/RegistryClass/: Registry.cpp  Registry.hpp  Registry.tpp
sources/ECS/SparseArrayClass/: SparseArray.hpp  SparseArray.tpp
sources/ECS/Systems/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.hpp
sources/ECS/Systems/AutoMoveSystem/: AutoMoveSystem.cpp  AutoMoveSystem.hpp
sources/ECS/Systems/CollisionSystem/: CollisionSystem.cpp  CollisionSystem.hpp
sources/ECS/Systems/ControlSystem/: ControlSystem.cpp  ControlSystem.hpp
sources/ECS/Systems/DrawSystem/: DrawSystem.cpp  DrawSystem.hpp
sources/ECS/Systems/EntityClassSystem/: EntityClassSystem.cpp  EntityClassSystem.hpp
sources/ECS/Systems/HealthSystem/: HealthSystem.cpp  HealthSystem.hpp
sources/ECS/Systems/LoggingSystem/: LoggingSystem.cpp  LoggingSystem.hpp
sources/ECS/Systems/MonsterShootSystem/: MonsterShootSystem.cpp  MonsterShootSystem.hpp
sources/ECS/Systems/PositionSystem/: PositionSystem.cpp  PositionSystem.hpp
sources/ECS/Systems/PowerUpSystem/: PowerUpSystem.cpp  PowerUpSystem.hpp
sources/ECS/Systems/ProjectileCollisionSystem/: ProjectileCollisionSystem.cpp  ProjectileCollisionSystem.hpp
sources/ECS/Systems/ProjectileSystem/: ProjectileSystem.cpp  ProjectileSystem.hpp
sources/ECS/Systems/ScoreSystem/: ScoreSystem.cpp  ScoreSystem.hpp
sources/ECS/Systems/ScrollSystem/: ScrollSystem.cpp  ScrollSystem.hpp
sources/ECS/Systems/ScrollingBackgroundSystem/: ScrollingBackgroundSystem.cpp  ScrollingBackgroundSystem.hpp
sources/ECS/Systems/ShootSystem/: ShootSystem.cpp  ShootSystem.hpp
sources/ECS/Systems/WaveSystem/: WaveSystem.cpp  WaveSystem.hpp
sources/binaryConverter/: binaryConverter.cpp
sources/client/: main.cpp
sources/client/ArgumentsHandling/: ArgumentsHandling.cpp  ArgumentsHandling.hpp
sources/client/Background/: Background.cpp  Background.hpp
sources/client/Buttons/: IButton.hpp
sources/client/Buttons/AButton/: AButton.cpp  AButton.hpp
sources/client/Buttons/Button/: Button.cpp  Button.hpp
sources/client/Buttons/ButtonFactory/: ButtonFactory.cpp  ButtonFactory.hpp
sources/client/Buttons/CooldownButton/: CooldownButton.cpp  CooldownButton.hpp
sources/client/Buttons/OneUseButton/: OneUseButton.cpp  OneUseButton.hpp
sources/client/Buttons/TextButton/: TextButton.cpp  TextButton.hpp
sources/client/EndMenu/: EndMenu.cpp  EndMenu.hpp
sources/client/EndingMenu/: EndingMenu.cpp  EndingMenu.hpp
sources/client/Game/: Game.cpp  Game.hpp
sources/client/InputHandler/: InputHandler.cpp  InputHandler.hpp
sources/client/MainMenu/: MainMenu.cpp  MainMenu.hpp
sources/client/Network/: Network.cpp  Network.hpp
sources/client/PlayMenu/: PlayMenu.cpp  PlayMenu.hpp
sources/client/RestartMenu/: RestartMenu.cpp  RestartMenu.hpp
sources/client/tcpClientSocket/: tcpClientSocket.cpp  tcpClientSocket.hpp
sources/client/udpClientSocket/: udpClientSocket.cpp  udpClientSocket.hpp
sources/server/: main.cpp  server.cpp
sources/server/GameModes/: EndlessMode.cpp  EndlessMode.hpp  IGameMode.hpp
sources/server/GameModes/AGameMode/: AGameMode.cpp  AGameMode.hpp
sources/server/handleArgument/: handleArgument.cpp  handleArgument.hpp
sources/server/tcpSocket/: tcpSocket.cpp  tcpSocket.hpp
sources/server/udp/: udp.cpp  udp.hpp
sources/server/udpSocket/: udpSocket.cpp  udpSocket.hpp
sources/utils/HandleArgument/: HandleArgument.cpp  HandleArgument.hpp
sources/utils/ParserClass/: Parser.cpp  Parser.hpp
sources/utils/binaryConverter/: binaryConverter.cpp  binaryConverter.hpp
sources/utils/binaryConverterClass/: binaryConverter.cpp  binaryConverter.hpp
sources/utils/debugColors/: debugColors.cpp  debugColors.hpp
sources/utils/handleArgument/: handleArgument.cpp  handleArgument.hpp
src/: main.cpp
src/Components/: AutoMove.hpp  Controllable.hpp  Drawable.hpp  Position.hpp  Projectile.hpp  Shoot.hpp  Velocity.hpp
src/EntityClass/: Entity.hpp
src/RegistryClass/: Registry.cpp  Registry.hpp  Registry.tpp
src/SparseArrayClass/: SparseArray.hpp
src/Systems/AutoMoveSystem/: AutoMoveSystem.hpp
src/Systems/ControlSystem/: ControlSystem.cpp  ControlSystem.hpp
src/Systems/DrawSystem/: DrawSystem.hpp
src/Systems/LoggingSystem/: LoggingSystem.cpp  LoggingSystem.hpp
src/Systems/PositionSystem/: PositionSystem.cpp  PositionSystem.hpp
src/Systems/ProjectileSystem/: ProjectileSystem.cpp  ProjectileSystem.hpp
src/Systems/ShootSystem/: ShootSystem.cpp  ShootSystem.hpp
tests/: CollisionSystemTests.cpp  PositionSystemTests.cpp  RegistrySystemsTests.cpp  RegistryTests.cpp  SparseArrayTests.cpp  binaryConverter.cpp  handleArgument.cpp
tests/ECS/: CollisionSystemTests.cpp  HealthSystemTests.cpp  PositionSystemTests.cpp  ProjectileCollisionSystemTests.cpp  RegistryExportTests.cpp  RegistryImportTests.cpp  RegistrySystemsTests.cpp  RegistryTests.cpp  SparseArrayTests.cpp
tests/binaryConverter/: binaryConverterTests.cpp
tests/client/: .ftest.toml
tests/server/: .ftest.toml  handleArgument.cpp
(+39 files in other folders)
